ash/common/shelf/app_list_button.h
@@ -25,7 +25,9 @@ class ASH_EXPORT AppListButton : public views::ImageButton {
   void OnAppListShown();
   void OnAppListDismissed();
 
-  bool draw_background_as_active() { return draw_background_as_active_; }
+  bool is_showing_app_list() const { return is_showing_app_list_; }
+
+  bool draw_background_as_active() const { return draw_background_as_active_; }
 
   // Sets alpha value of the background and schedules a paint.
   void SetBackgroundAlpha(int alpha);
@@ -62,6 +64,10 @@ class ASH_EXPORT AppListButton : public views::ImageButton {
   // Get the center point of the app list button used to draw its background and
   // ink drops.
   gfx::Point GetCenterPoint() const;
+
+  // True if the app list is currently showing for this display.
+  // This is useful because other IsApplistVisible functions aren't per-display.
+  bool is_showing_app_list_;
 
   // True if the background should render as active, regardless of the state of
   // the application list.
